--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "jquery": "^3.6.0",
     "next": "^12.2.2",
+    "nextjs": "^0.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11"
